# MultiAgent_java_generator

./: .env  README.md  app.py  example_rfa.md  pyproject.toml  requirements.txt
src/app/: llm.py  main.py  orchestrator.py
src/app/tools/: codegen.py  fs.py  parser.py  patterns.py  testgen.py
src/main/java/com/example/app/client/: CarInsuranceApiRequestForArchitectureRfaClient.java
src/main/java/com/example/app/client/model/: CarInsuranceApiRequestForArchitectureRfaExternalModel.java
src/main/java/com/example/app/controller/: CarInsuranceApiRequestForArchitectureRfaController.java
src/main/java/com/example/app/dto/: CarInsuranceApiRequestForArchitectureRfaRequestDTO.java  CarInsuranceApiRequestForArchitectureRfaResponseDTO.java
src/main/java/com/example/app/mapper/: CarInsuranceApiRequestForArchitectureRfaMapper.java
src/main/java/com/example/app/service/: CarInsuranceApiRequestForArchitectureRfaService.java
src/main/resources/: application.properties
src/test/java/com/example/app/: CarInsuranceApiRequestForArchitectureRfaClientTest.java  CarInsuranceApiRequestForArchitectureRfaControllerTest.java  CarInsuranceApiRequestForArchitectureRfaMapperTest.java  CarInsuranceApiRequestForArchitectureRfaServiceTest.java
tests/: test_smoke.py
